--- a/_styles/section.scss
+++ b/_styles/section.scss
@@ -37,3 +37,9 @@ main > section:nth-of-type(odd) {
 main > section:nth-of-type(even) {
   background: var(--background-alt);
 }
+
+@media (max-width: 600px) {
+  section {
+    padding: 20px 15px;
+  }
+}
